<resources>
    <string name="app_name">DomVet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_register">Sign in</string>
    <string name="prompt_phone_number">Phone</string>
    <string name="prompt_username">Username</string>
    <string name="action_username">Username</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="code">Code</string>
    <string name="sms_containing_code_has_been_sent">"We've just sent you an SMS with verification code. Please enter it to verify your phone."</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="title_profile">Profile</string>
    <string name="MainNavHost">MainNavHost</string>
    <string name="AuthNavHost">AuthNavHost</string>
    <string name="RegisterNavHost">RegisterNavHost</string>
    <string name="AddPostNavHost">AddPostNavHost</string>
    <string name="my_trips">My Trips</string>
    <string name="search_trip">Search Trip</string>
    <string name="authorize">Authorize</string>
    <string name="confirm">Confirm</string>
    <string name="phone_confirmation">Confirmation</string>
    <string name="title_add_car">Add Car</string>
    <string name="add">Add</string>
    <string name="car_plate_number">Plate number</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="car_year">Car year</string>
    <string name="incorrect_phone_number_format">Number format is incorrect!</string>
    <string name="add_avatar_photo">Add car avatar</string>
    <string name="system_error">System error occurred!</string>
    <string name="petrol">Petrol</string>
    <string name="methane">Methane</string>
    <string name="propane">Propane</string>
    <string name="myCars">My Cars</string>
    <string name="delete">Delete</string>
    <string name="set_default">Set default</string>
    <string name="add_post">Add post</string>
    <string name="title_add_post">Add post</string>
    <string name="destinations">Destinations</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dateTime">Date and time</string>
    <string name="car_and_text">Car and note</string>
    <string name="preview_post">Preview post</string>
    <string name="price_and_seats">Price and seats</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="departure_asap">Departing as soon as full</string>
    <string name="first_part_of_day">Dawn \n(00:00–6:00)</string>
    <string name="second_part_of_day">Forenoon \n(6:00–12:00)</string>
    <string name="third_part_of_day">Afternoon \n(18:00–12:00)</string>
    <string name="fourth_part_of_day">Evening \n(00:00–18:00)</string>
    <string name="first_part_of_day_one_line">Dawn (00:00–6:00)</string>
    <string name="second_part_of_day_one_line">Forenoon (6:00–12:00)</string>
    <string name="third_part_of_day_one_line">Afternoon (18:00–12:00)</string>
    <string name="fourth_part_of_day_one_line">Evening (00:00–18:00)</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="price_for_one_passenger">Price for one passenger</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="please_add_notes_if_needed">Please add notes if needed…</string>
    <string name="your_car_for_this_ride">Your car for this ride</string>
    <string name="asap">ASAP</string>
    <string name="departure_date_and_time">Date: %1$s Time: %2$s</string>
    <string name="price_and_seats_format">Price: %1$s * Seats: %2$s</string>
    <string name="anytime">Any time</string>
    <string name="summary">Сводная</string>
    <string name="history_transactions">История операций</string>
    <string name="active">Актуальные</string>
    <string name="history">History</string>
    <string name="no_active_orders">You have no active trips…</string>
    <string name="no_history_posts">You have no history posts…</string>
    <string name="action_sign_out">Выйти</string>
    <string name="price_range">Price range</string>
    <string name="apply">Apply</string>
    <string name="no_posts_found">No posts found…</string>
    <string name="reset">Reset</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="my_finance">Мои финансы</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="phone">Телефон</string>
    <string name="login_main_title">Стабильный источник новых пациентов</string>
    <string name="login_sub_title">Зарегистриуйтесь и начните получать вызовы</string>
    <string name="phone_main_title">Введите номер телефона для входа</string>
    <string name="phone_sub_title">Мы пришлем вам код подтверждения</string>
    <string name="text_terms">Нажимая кнопку \"Далее\" я принимаю Пользовательское соглашение</string>
    <string name="doc_calls">Все вызовы</string>
    <string name="current_status">Текущий статус:</string>
    <string name="ready_for_orders">Готов принимать вызовы</string>
    <string name="chats">Чаты</string>
    <string name="reviews">Отзывы</string>
    <string name="personal_materials">Персональные материалы</string>
    <string name="info_profile">Данные профиля</string>
    <string name="my_graph_of_accept">Мой график приемов</string>
    <string name="services_and_prices">Услуги и цены</string>
    <string name="call_locations">География вызовов</string>
    <string name="_new">НОВЫЙ</string>
    <string name="chosen_by_client">Клиент выбрал вас</string>
    <string name="chosen_client">Избранный клиент</string>
    <string name="low_commission">% Комиссия снижена</string>
    <string name="more_info">Подробнная информация</string>
    <string name="accep_call">Принять вызов</string>
    <string name="reject_call">Отказаться от вызова</string>
    <string name="call_arranged">Вызов согласован</string>
    <string name="review">Оценка:</string>
    <string name="_continue">Продолжить</string>
    <string name="add_your_photo">Добавьте ваше фото</string>
    <string name="personal_info">Personal info</string>
    <string name="docs_and_certificates">Документы и сертификаты</string>
    <string name="passport_and_photo">Passport and photo</string>
    <string name="select_city">Selec city</string>
    <string name="introduce_yourself">Представьтесь пожалуйста</string>
    <string name="your_surname">Ваша фамилия</string>
    <string name="dob">Год рождения</string>
    <string name="fathers_name">Отчество</string>
    <string name="your_dob">Ваш год рождения</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_fathers_name">Ваше отчество</string>
    <string name="select_your_city">Укажите свой город</string>
    <string name="photo_samples">Примеры удачных фотографий</string>
    <string name="lbl_choose_city_from_list">Выберите город из списка или воспользуйтесь быстрым поиском</string>
    <string name="photo_sample_title">Не забывайте, хорошая фотография может помочь вам получить больше заказов!</string>
    <string name="photo_sample_text_1">-Фотография должна быть сделана крупным планом при хорошем освещении в хорошем качестве. \n\n -Вы можете сделать фото на своём рабочем месте или во время приема совместно с питомцем.</string>
    <string name="title_calls">Вызовы</string>
    <string name="title_doctors">Врачи</string>
    <string name="title_animals">Мои питомцы</string>
    <string name="person">Профиль</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Принимать</string>
    <string name="cancel">Отмена</string>
    <string name="error">Ошибка</string>
    <string name="error_with_build_number">Ошибка %1$s</string>
    <string name="genres">Genres</string>
    <string name="menu_login">Login</string>
    <string name="add_card">Добавить карту +</string>
    <string name="login">Login</string>
    <string name="sigin">Sigin</string>
    <string name="password_hint">Password</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="order_no">Order No: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="inner_block">Inner block</string>
    <string name="external_block">External block</string>
    <string name="internal_block">Internal block</string>
    <string name="input_internal_block">Place input internal block number</string>
    <string name="input_external_block">Place input external block number</string>
    <string name="input_location">Place input location</string>
    <string name="save">Сохранить</string>
    <string name="send">Send</string>
    <string name="do_you_want_delete_card">Do yo want to delete card?</string>
    <string name="warning">Предупреждение</string>
    <string name="selected_conditor">Selected Conditor</string>
    <string name="conditors">Conditors</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="permisson_error">you can not check the resolution, refresh the current window and try again</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="generating_an_error_try_again">Generation error.<br />Try again</string>
    <string name="place_input_conditor">Place input conditor</string>
    <string name="take_location">Take location</string>
    <string name="enable_location">Для использования всех функций приложения, включите местоположение</string>
    <string name="btn_no">Нет</string>
    <string name="btn_continue">Продолжать</string>
    <string name="help">Помощь</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_temporary_save_all_data">Do you want temporary save all data ?</string>
    <string name="next">Далее</string>
    <string name="done">\u0020Готово\u0020\u0020</string>
    <string name="page_1_title">Проверенные и сертифицированные врачи</string>
    <string name="page_1_subtitle">Мы проверяем наличие всех необходимых дипломов и сертификатов у всех врачей</string>
    <string name="page_2_title">Отсутствие стресса у вашего питомца</string>
    <string name="page_2_subtitle">Ваш питомец не будет испытывать стресс при перевозке и контакте с другими животными.</string>
    <string name="page_3_title">Удобное время</string>
    <string name="congratulation_title">Поздравляем!</string>
    <string name="my_calls">Мои вызовы</string>
    <string name="full_biography_doctor">Полная биография врача</string>
    <string name="schedule_appointments">График приемов врача</string>
    <string name="choose_convenient_time">Укажите удобное для вас время</string>
    <string name="my_call_regions">Ваши районы вызовов</string>
    <string name="in_which_you_can_serve_calls">В которое вы можете выехжать на вызовы.</string>
</resources>