<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_profile_graph.xml"
    app:startDestination="@id/navLoginFragment">


    <fragment
        android:id="@+id/navLoginFragment"
        android:name="com.anymobile.domvet.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navLoginFragment_to_navPhoneFragment"
            app:destination="@id/navPhoneFragment" />
    </fragment>

    <fragment
        android:id="@+id/navPhoneFragment"
        android:name="com.anymobile.domvet.ui.auth.phone.PhoneFragment"
        android:label="@string/phone"
        tools:layout="@layout/fragment_phone">
        <argument
            android:name="password"
            app:argType="string"/>

        <argument
            android:name="phone"
            app:argType="string"/>
        <action
            android:id="@+id/action_navPhoneFragment_to_navPhoneConfirmFragment"
            app:destination="@id/navPhoneConfirmFragment" />
    </fragment>

    <fragment
        android:id="@+id/navPhoneConfirmFragment"
        android:name="com.anymobile.domvet.ui.auth.confirm.PhoneConfirmFragment"
        android:label="@string/phone_confirmation"
        tools:layout="@layout/fragment_phone_confirm">
        <argument
            android:name="password"
            app:argType="string"/>

        <argument
            android:name="phone"
            app:argType="string"/>
    </fragment>

</navigation>