<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.3"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/tutorial_2_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/introduce_yourself"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />


    <androidx.cardview.widget.CardView
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/surname"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/your_surname"
                android:textColor="@color/text_grey_medium"
                android:id="@+id/edtSurname"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView

                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/your_name"
                android:textColor="@color/text_grey_medium"
                android:id="@+id/edtName"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/fathersName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView

                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/fathers_name"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/your_fathers_name"
                android:textColor="@color/text_grey_medium"
                android:id="@+id/edtFathersName"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fathersName"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/your_dob"
                android:textColor="@color/text_grey_medium"
                android:id="@+id/edtDob"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="?android:actionBarSize"
        android:background="@drawable/button_shape_default_rounded"
        android:fontFamily="@font/gilroy_black"
        android:text="@string/_continue"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>