<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_menu_doc_calls">

    <fragment
        android:id="@+id/nav_menu_doc_calls"
        android:name="com.sablab.domvetdoctor.ui.main.searchtrip.SearchTripFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search_trip">

        <action
            android:id="@+id/action_nav_menu_doc_calls_to_nav_menu_my_calls"
            app:destination="@id/nav_menu_my_calls" />
        <action
            android:id="@+id/action_nav_menu_doc_calls_to_nav_menu_profile"
            app:destination="@id/nav_menu_profile" />
        <action
            android:id="@+id/action_nav_menu_doc_calls_self"
            app:destination="@id/nav_menu_doc_calls"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_menu_doc_calls_to_nav_menu_my_finance"
            app:destination="@id/nav_menu_my_finance" />


    </fragment>

    <fragment
        android:id="@+id/nav_menu_my_calls"
        android:name="com.sablab.domvetdoctor.ui.main.mycalls.MyCallsFragment"
        android:label="@string/my_calls"
        tools:layout="@layout/fragment_my_calls">


        <action
            android:id="@+id/action_nav_menu_my_calls_to_nav_menu_profile"
            app:destination="@id/nav_menu_profile" />
        <action
            android:id="@+id/action_nav_menu_my_calls_to_nav_menu_doc_calls"
            app:destination="@id/nav_menu_doc_calls" />
        <action
            android:id="@+id/action_nav_menu_my_calls_self"
            app:destination="@id/nav_menu_my_calls"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_menu_my_calls_to_nav_menu_my_finance"
            app:destination="@id/nav_menu_my_finance" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_my_finance"
        android:name="com.sablab.domvetdoctor.ui.main.profile.ProfileFragment"
        android:label="@string/my_finance"
        tools:layout="@layout/fragment_finance">

        <action
            android:id="@+id/action_nav_menu_profile_to_nav_menu_my_calls"
            app:destination="@id/nav_menu_my_calls" />
        <action
            android:id="@+id/action_nav_menu_profile_to_nav_menu_doc_calls"
            app:destination="@id/nav_menu_doc_calls" />
        <action
            android:id="@+id/action_nav_menu_profile_self"
            app:destination="@id/nav_menu_profile"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_profile"
        android:name="com.sablab.domvetdoctor.ui.main.profile.ProfileFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_nav_menu_profile_to_nav_menu_my_calls"
            app:destination="@id/nav_menu_my_calls" />
        <action
            android:id="@+id/action_nav_menu_profile_to_nav_menu_doc_calls"
            app:destination="@id/nav_menu_doc_calls" />
        <action
            android:id="@+id/action_nav_menu_profile_self"
            app:destination="@id/nav_menu_profile"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_menu_profile_to_nav_menu_my_finance"
            app:destination="@id/nav_menu_my_finance" />
    </fragment>
</navigation>